Fix overflow in post title

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -205,7 +205,7 @@ body > main > section {
 }
 
 .cardelement-container {
-    width: calc(100% - 50px);
+    width: calc(100% - 50px - 15px);
     display: flex;
     flex-direction: column;
     margin: auto;
